first few samples and move text to html from js

--- a/index.html
+++ b/index.html
@@ -2,9 +2,39 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 	<script src="main.js"></script>
 </head>
 <body>
+	<h1>Javascript Examples</h1>
+		<div class="info">Strings</div>
+		<div class="example">Sample: <BR>"I" + "Like" + "Cheese"</div>
+		<div class="descrip">When I add strings in console it will appear as "ILikeCheese" combined into 1 string.</div>
 
+		<div class="info">.split</div>
+		<div class="example">Sample: <BR>"baseball".split ("ase")</div>
+		<div class="descrip">When I use .split in the console it will remove "ase" from the string and break original string into 2 new seperate strings "b" and "ball".</div><BR>
+		<div class="example">Sample: <BR>"baseball".split ()</div>
+		<div class="descrip">When I use .split in the console it will it will remove nothing and leave the single string intact.</div>
+
+		<div class="info">.length</div>
+		<div class="example">Sample: <BR>"baseball".length</div>
+		<div class="descrip">When I add .length in console it will return "8" as .length counts the number of characters in a string.</div>
+
+		<div class="info">.slice</div>
+		<div class="example">Sample: <BR>"baseball".slice (0,2)</div>
+		<div class="descrip">When I add .slice in console it return "ba" as .slice returns characters of a string at that character space.</div>
+
+		<div class="info">Strings</div>
+		<div class="example">Sample: <BR> "I" + "Like" + "Cheese"</div>
+		<div class="descrip">When I add strings in console it will appear as "ILikeCheese" combined into 1 string</div>
+
+		<div class="info">Assigning Numeric Value For Variable</div>
+		<div class="example">Sample: <BR>var x = 3</div>
+		<div class="descrip">When I add var x = 3 in .js file and the run "x < 4" in console it will return "true" as the value of x has been previously set to 3.  If I run "x > 4" it will return "false".<BR>I can manipulate the new value of x in other algebraic equations as well.  Running "3 + x" will return 6.  "x + x" will return 6. </div>
+
+		<div class="info">Remainder Operator</div>
+		<div class="example">Sample: <BR>25 % x</div>
+		<div class="descrip">When I add 25 % 4 in the console it will return 1 as "%" gives the remainder once the second number is divided from the original number.  Thus 25 divded by x (3) is 24 leaving a remainder of 1.  If "24 % x" was entered into the console it would return "0".</div>
 </body>
 </html>
