add more examples

--- a/index.html
+++ b/index.html
@@ -25,9 +25,19 @@
 		<div class="example">Sample: <BR>"baseball".slice (0,2)</div>
 		<div class="descrip">When I add .slice in console it return "ba" as .slice returns characters of a string at that character space.</div>
 
-		<div class="info">Strings</div>
-		<div class="example">Sample: <BR> "I" + "Like" + "Cheese"</div>
-		<div class="descrip">When I add strings in console it will appear as "ILikeCheese" combined into 1 string</div>
+		<div class="info">.pop</div>
+		<div class="example">Sample: <BR>["baseball", "homerun", "hit"].pop ()</div>
+		<div class="descrip">When I add .pop to an array in console it will return "hit" as it the last item in the array.</div>
+
+
+		<div class="info">.shift</div>
+		<div class="example">Sample: <BR>"baseball".slice (0,2)</div>
+		<div class="descrip">When I add .slice in console it return "ba" as .slice returns characters of a string at that character space.</div>
+
+
+		<div class="info">Sample Array</div>
+		<div class="example">Sample: <BR>["Red, Sox"].join (" ")</div>
+		<div class="descrip">When I add "["Red", "Sox"].join(" ")" in the console it will combine to "Red Sox" as it combines the two strings inside the array into one string using " " to add a space between the two.</div>
 
 		<div class="info">Assigning Numeric Value For Variable</div>
 		<div class="example">Sample: <BR>var x = 3</div>
@@ -36,5 +46,23 @@
 		<div class="info">Remainder Operator</div>
 		<div class="example">Sample: <BR>25 % x</div>
 		<div class="descrip">When I add 25 % 4 in the console it will return 1 as "%" gives the remainder once the second number is divided from the original number.  Thus 25 divded by x (3) is 24 leaving a remainder of 1.  If "24 % x" was entered into the console it would return "0".</div>
+
+		<div class="info">True And False</div>
+		<div class="example">Sample: <BR>x == 3</div>
+		<div class="descrip">When I add "x == 3" into the console it will return true as the value of x is 3.  If I enter "x==4" into the console it will return false.</div>
+
+		<div class="info">Using "If"</div>
+		<div class="example">Sample: <BR>x == 3</div>
+		<div class="descrip">When I add "x == 3" into the console it will return true as the value of x is 3.  If I enter "x==4" into the console it will return false.</div>
+
+		<div class="info">Using "And"/div>
+		<div class="example">Sample: <BR>x < 4 && x > 7</div>
+		<div class="descrip">The symbol for or is "&&".  When I add "x < 4 && x > 7" into the console it will return false as the value of x is 3 and 3 is less than 4 but NOT greater than 7.</div>
+
+		<div class="info">Using "Or"/div>
+		<div class="example">Sample: <BR>x < 4 || x > 7</div>
+		<div class="descrip">The symbol for or is "||".  When I add "x < 4 || x > 7" into the console it will return true as the value of x is 3 and 3 is less than 4 OR greater than 7.</div>
+
+
 </body>
 </html>
