--- a/index.html
+++ b/index.html
@@ -27,13 +27,15 @@
 
 		<div class="info">.pop</div>
 		<div class="example">Sample: <BR>["baseball", "homerun", "hit"].pop ()</div>
-		<div class="descrip">When I add .pop to an array in console it will return "hit" as it the last item in the array.</div>
-
+		<div class="descrip">When I add .pop to an array in console it will return "hit" as it is the last item in the array.</div>
 
 		<div class="info">.shift</div>
-		<div class="example">Sample: <BR>"baseball".slice (0,2)</div>
-		<div class="descrip">When I add .slice in console it return "ba" as .slice returns characters of a string at that character space.</div>
+		<div class="example">Sample: <BR>["single", "double", "triple"].shift ()</div>
+		<div class="descrip">When I add .shift in console it return "single" as it is the first time in the array.</div>
 
+		<div class="info">.reverse</div>
+		<div class="example">Sample: <BR>teamstats.reverse ()</div>
+		<div class="descrip">When I add teamstats.reverse () in the console it will return "50, 25, 15" as it is the reverse of strings in the array assigned to variable teamstats.</div>
 
 		<div class="info">Sample Array</div>
 		<div class="example">Sample: <BR>["Red, Sox"].join (" ")</div>
@@ -55,13 +57,19 @@
 		<div class="example">Sample: <BR>x == 3</div>
 		<div class="descrip">When I add "x == 3" into the console it will return true as the value of x is 3.  If I enter "x==4" into the console it will return false.</div>
 
-		<div class="info">Using "And"/div>
+		<div class="info">Using "And"</div>
 		<div class="example">Sample: <BR>x < 4 && x > 7</div>
 		<div class="descrip">The symbol for or is "&&".  When I add "x < 4 && x > 7" into the console it will return false as the value of x is 3 and 3 is less than 4 but NOT greater than 7.</div>
 
-		<div class="info">Using "Or"/div>
+		<div class="info">Using "Or"</div>
 		<div class="example">Sample: <BR>x < 4 || x > 7</div>
 		<div class="descrip">The symbol for or is "||".  When I add "x < 4 || x > 7" into the console it will return true as the value of x is 3 and 3 is less than 4 OR greater than 7.</div>
+
+		<div class="info">Calling For Info</div>
+		<div class="example">Sample: bigPapi.homeruns</div>
+		<div class="descrip">Entering "bigPapi.homeruns" will return "6" as he has hit 6 homeruns and this is attached in his variable array.  Another example would be entering "pedroia.battingaverage" in the console which would return ".275" as this is the value attached in his variable array.</div>
+
+
 
 
 </body>
