add multiple new functions and update html to include baseball pulls of stats

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 <body>
 	<h1>Javascript Examples</h1>
 		<div class="info">Strings</div>
-		<div class="example">Sample: <BR>"I" + "Like" + "Cheese"</div>
-		<div class="descrip">When I add strings in console it will appear as "ILikeCheese" combined into 1 string.</div>
+		<div class="example">Sample: <BR>"I" + "Like" + "Baseball"</div>
+		<div class="descrip">When I add strings in console it will appear as "ILikeBaseball" combined into 1 string.</div>
 
 		<div class="info">.split</div>
 		<div class="example">Sample: <BR>"baseball".split ("ase")</div>
@@ -50,24 +50,24 @@
 		<div class="descrip">When I add 25 % 4 in the console it will return 1 as "%" gives the remainder once the second number is divided from the original number.  Thus 25 divded by x (3) is 24 leaving a remainder of 1.  If "24 % x" was entered into the console it would return "0".</div>
 
 		<div class="info">True And False</div>
-		<div class="example">Sample: <BR>x == 3</div>
-		<div class="descrip">When I add "x == 3" into the console it will return true as the value of x is 3.  If I enter "x==4" into the console it will return false.</div>
+		<div class="example">Sample: <BR>ortiz.triples == napoli.triples</div>
+		<div class="descrip">When I add "ortiz.triples == napoli.triples" into the console it will return true as the value of napoli.triples and oritz.triples is 0.  If I enter "napoli.triples == pedroia.doubles" into the console it will return false.</div>
 
 		<div class="info">Using "If"</div>
-		<div class="example">Sample: <BR>x == 3</div>
-		<div class="descrip">When I add "x == 3" into the console it will return true as the value of x is 3.  If I enter "x==4" into the console it will return false.</div>
+		<div class="example">Sample: <BR>if (pedroia.doubles > 10) {console.log ('Laser Show')} else {console.log ('Swing The Bat')}</div>
+		<div class="descrip">When I add above if/else statement into console it will return "Laser Show" as the value of pedroia.doubles is 11..</div>
 
 		<div class="info">Using "And"</div>
-		<div class="example">Sample: <BR>x < 4 && x > 7</div>
-		<div class="descrip">The symbol for or is "&&".  When I add "x < 4 && x > 7" into the console it will return false as the value of x is 3 and 3 is less than 4 but NOT greater than 7.</div>
+		<div class="example">Sample: <BR>napoli.battingaverage > 0.1 && napoli.battingaverage < 0.2</div>
+		<div class="descrip">The symbol for or is "&&".  When I add the above satement into the console it will return false as the value of napoli.battingaverage is .290 and .290 is greater than 0.1 but NOT less than 0.2.</div>
 
 		<div class="info">Using "Or"</div>
-		<div class="example">Sample: <BR>x < 4 || x > 7</div>
-		<div class="descrip">The symbol for or is "||".  When I add "x < 4 || x > 7" into the console it will return true as the value of x is 3 and 3 is less than 4 OR greater than 7.</div>
+		<div class="example">Sample: <BR>ortiz.battingaverage < 0.4 || ortiz.battingaverage > 0.19</div>
+		<div class="descrip">The symbol for or is "||".  When I add "x < 4 || x > 7" into the console it will return true as the value of ortiz.battingaverage is 0.241 and 0.241 is less than 0.4 OR greater than 0.19.</div>
 
 		<div class="info">Calling For Info</div>
-		<div class="example">Sample: bigPapi.homeruns</div>
-		<div class="descrip">Entering "bigPapi.homeruns" will return "6" as he has hit 6 homeruns and this is attached in his variable array.  Another example would be entering "pedroia.battingaverage" in the console which would return ".275" as this is the value attached in his variable array.</div>
+		<div class="example">Sample: ortiz.homeruns</div>
+		<div class="descrip">Entering "ortiz.homeruns" will return "6" as he has hit 6 homeruns and this is attached in his variable array.  Another example would be entering "pedroia.battingaverage" in the console which would return ".275" as this is the value attached in his variable array.</div>
 
 
 
