--- a/index.html
+++ b/index.html
@@ -69,8 +69,9 @@
 		<div class="example">Sample: ortiz.homeruns</div>
 		<div class="descrip">Entering "ortiz.homeruns" will return "6" as he has hit 6 homeruns and this is attached in his variable array.  Another example would be entering "pedroia.battingaverage" in the console which would return ".275" as this is the value attached in his variable array.</div>
 
-
-
-
+		
+		<div class="info">Interesting Data Pulls</div>
+		<div class="example">Pull interesting info : (uehara.era + buckholz.era + doubront.era +lackey.era + lester.era + miller.era + peavy.era) / 7    ===== Pitching Average ERA
+		</div>
 </body>
 </html>
