--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="main.css">
-	<script src="main2.js"></script>
+	<script src="main.js"></script>
 </head>
 <body>
 	<h1>Javascript Examples</h1>
