--- a/index2.html
+++ b/index2.html
@@ -71,7 +71,7 @@
 
 		
 		<div class="info">Interesting Data Pulls</div>
-		<div class="example">Pull interesting info : (uehara.era + buckholz.era + doubront.era +lackey.era + lester.era + miller.era + peavy.era) / 7    ===== Pitching Average ERA
+		<div class="example">Pull interesting info : players.forEach(function(player){console.log("Player Name:", player.name, "Player RBIs:", player.rbi, "Player Homeruns:", player.homeruns, "Player Doubles:", player.doubles); })    ===== Players with their names, RBIs, Homeruns, and doubles
 		</div>
 </body>
 </html>
