--- a/index2.html
+++ b/index2.html
@@ -124,7 +124,7 @@
 		<br><br>
 		Sample 2: players.map(function(player) {return [player.name];})    ===== Will return all players as seperate arrays.
 		<br><br>
-		Sample 3: SAMPLE    ===== Descrip Here.
+		Sample 3: players.map(function(player) {return ["Player Name:",player.name,"Homeruns:",player.homeruns];})    ===== Will return an array with 4 objects each with a player name and homeruns attribute.
 		<br><br>
 		Sample 4: SAMPLE    ===== Descrip Here.
 		<br><br>
