add .map 3-5 examples

--- a/index2.html
+++ b/index2.html
@@ -126,11 +126,11 @@
 		<br><br>
 		Sample 3: players.map(function(player) {return ["Player Name:",player.name,"Homeruns:",player.homeruns];})    ===== Will return an array with 4 objects each with a player name and homeruns attribute.
 		<br><br>
-		Sample 4: SAMPLE    ===== Descrip Here.
+		Sample 4: players.map(function(player) {console.log("Player Name:",player.name);})    ===== Will return Player Name:Player Name Here
 		<br><br>
-		Sample 5: SAMPLE    ===== Descrip Here.
+		Sample 5: players.map(function(player) {console.log(player.name,"has",player.rbi,"RBIs.");})     ===== Will return Player Name has X RBIS.
 		<br><br>
-		Sample 6: SAMPLE    ===== Descrip Here.
+		Sample 6: {console.log(player.name,"has",player.otherbatting.strikeouts,"strikeouts.");})   ===== Will return Player Name has X strikeouts (from the nested object "other batting".)
 		<br><br>
 		Sample 7: SAMPLE    ===== Descrip Here.
 		<br><br>
