--- a/index2.html
+++ b/index2.html
@@ -134,7 +134,7 @@
 		<br><br>
 		Sample 7: players.map(function(player) {"The Red Sox pitcher",console.log(player.name,"has",player.losses,"losses","and",player.wins,"wins.");})    ===== Will retrun "The Red Sox pitcher NAME has X wins and X losses.
 		<br><br>
-		Sample 8: players.map(function(player) {"The Red Sox pitcher",console.log(player.name,"has",player.strikeouts,"strikeouts","and",player.walks,"walks.");})    ===== Will retrun "NAME has X strikeouts and X walks.
+		Sample 8: players.map(function(player) {console.log(player.name,"has",player.strikeouts,"strikeouts","and",player.walks,"walks.");})    ===== Will retrun "NAME has X strikeouts and X walks.
 		<br><br>
 		Sample 9 SAMPLE    ===== Descrip Here.
 		<br><br>
