--- a/index2.html
+++ b/index2.html
@@ -83,9 +83,9 @@
 		<br><br>
 		Sample 6: players.forEach(function(player){console.log("Player Name:", player.name, "Strikeouts:", player.otherbatting.strikeouts); })    ===== Will return strikeouts for the player.
 		<br><br>
-		Sample 7: SAMPLE    ===== Descrip Here.
+		Sample 7: players.forEach(function(player){console.log(player.name, "has had", player.otherbatting.strikeouts, "strikeouts.","this season"); })    ===== Will return PLAYER NAME has had X strikeouts this season.
 		<br><br>
-		Sample 8: SAMPLE    ===== Descrip Here.
+		Sample 8: players.forEach(function(player) {console.log(player.name,"-", player.position);})    ===== Will return Playername - Player Position.
 		<br><br>
 		Sample 9: SAMPLE    ===== Descrip Here.
 		<br><br>
