add function to search for average homeruns

--- a/index2.html
+++ b/index2.html
@@ -107,13 +107,13 @@
 		<br><br>
 		Sample 5:<br> averageRBI(players)    ===== If you run "averageRBI(players)" you get a return off all the players' rbis.  It does this by mapping the players array then returns the property [player.rbi].  Then it uses reduce on the newly created array to return the sum of all the objects in the array.  Then it divides the sum of all the rbis by the total number of objects in the array to get the average RBIs per player.
 		<br><br>
-		Sample 6:<br> averageAtBats(players) ===== If you run "averageAtBats(players)" you get a return off all the players' at bats. It does this by mapping the players array then returns the property [player.atbats]. Then it uses reduce on the newly created array to return the sum of all the objects in the array. Then it divides the sum of all the atbats by the total number of objects in the array to get the average atbats per player.     ===== Descrip Here.
+		Sample 6:<br> averageAtBats(players) ===== If you run "averageAtBats(players)" you get a return off all the players' at bats. It does this by mapping the players array then returns the property [player.atbats]. Then it uses reduce on the newly created array to return the sum of all the objects in the array. Then it divides the sum of all the atbats by the total number of objects in the array to get the average atbats per player. 
 		<br><br>
 		Sample 7:<br> [players[0].atbats,players[1].atbats,players[2].atbats,players[3].atbats,players[4].atbats,players[5].atbats,players[6].atbats,players[7].atbats,players[8].atbats,players[9].atbats,players[10].atbats,players[11].atbats,players[12].atbats].reduce(function(player1, player2){ return player1 + player2; })    ===== This will return the at bats of just fielders and not pitchers.
 		<br><br>
 		Sample 8:<br> [players[13].strikeouts,players[14].strikeouts,players[15].strikeouts,players[16].strikeouts,players[17].strikeouts,players[18].strikeouts].reduce(function(player1, player2){ return player1 + player2; })    ===== This will return the total strikeouts for just the pitchers.
 		<br><br>
-		Sample 9:<br> SAMPLE    ===== Descrip Here.
+		Sample 9:<br> averageHomeruns(players) ===== If you run "averageHomeruns(players)" you get a return off all the players' homeruns. It does this by mapping the players array then returns the property [player.homeruns]. Then it uses reduce on the newly created array to return the sum of all the objects in the array. Then it divides the sum of all the atbats by the total number of objects in the array to get the average homeruns per player. 
 		<br><br>
 		Sample 10:<br> SAMPLE    ===== Descrip Here.
 		</div>
