add another .reduce examples

--- a/index2.html
+++ b/index2.html
@@ -115,7 +115,7 @@
 		<br><br>
 		Sample 9:<br> averageHomeruns(players) ===== If you run "averageHomeruns(players)" you get a return off all the players' homeruns. It does this by mapping the players array then returns the property [player.homeruns]. Then it uses reduce on the newly created array to return the sum of all the objects in the array. Then it divides the sum of all the atbats by the total number of objects in the array to get the average homeruns per player. 
 		<br><br>
-		Sample 10:<br> SAMPLE    ===== Descrip Here.
+		Sample 10:<br> [players[4].runs,players[5].runs,players[6].runs,players[7].runs].reduce(function(player1, player2){ return player1 + player2; })    ===== Will return total runs for the players listed in the array.
 		</div>
 
 
